@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<tree string="Cancel motives">
+    <field name="code"/>
+    <field name="name"/>
+</tree>
