@@ -1,3 +1,5 @@
+* Add feature: cashing cancel
+
 Version 1.6 - 2015-12-23
 * Add payer party on statement line
 
